welcome.lessons.welcome.variables.Variables.scala.code
var NbPas = 1
while(estSurBiscuit()==0)
{ avance()
Nbpas= NbPas+1
}
prendBiscuit()
var Deajfait =0
while(Dejafait!=NbPas)
{ recule()
Dejafait= Dejafait+1
}
poseBiscuit()

